# gh-aw-firewall

./: .dockerignore  .eslintrc.js  .gitignore  .markdownlint.json  AGENTS.md  ASTRO_STARLIGHT_SETUP.md  CI_TEST.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  ENVIRONMENT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  SECURITY-FIX-STATUS.md  SECURITY_FIX_SUMMARY.md  TESTING.md  action.yml  commitlint.config.js  eslint.config.js  eslint.config.mjs  gh-execute-step.yaml  install.sh  jest.config.js  package-lock.json  package.json  skill.md  test-chroot.sh  test-copilot-sandbox.ts  test-squid-nonroot.sh  test-token-unset.sh
.github/: CODEOWNERS  dependabot.yml  lychee.toml  release.yml  settings.yml
actions/: README.md
containers/agent/one-shot-token/: .gitignore  Cargo.toml  README.md  TESTS.md  build.sh  encode-tokens.sh  one-shot-token.c  test_environ_array  test_environ_array.c  test_getenv  test_getenv.c  test_proc_environ  test_proc_environ.c  test_proc_environ_fork  test_proc_environ_fork.c  test_program  test_program.c  test_secure_getenv  test_secure_getenv.c  test_skip_unset.sh
containers/agent/one-shot-token/src/: lib.rs
docs/: ARCHITECTURE.md  GITHUB_ACTIONS.md  LOGGING_QUICKREF.md  QUICKSTART.md  RELEASE_TEMPLATE.md  RELEASING.md  SQUID_LOG_FILTERING.md  TROUBLESHOOTING.md  agent-images.md  api-proxy-sidecar.md  architecture.md  authentication-architecture.md  chroot-mode.md  claude_code.md  compatibility.md  dlp.md  dns-over-https.md  environment.md  (+22 more)
docs-site/: README.md  astro.config.mjs  package-lock.json  package.json
(+480 files in other folders)
