[package]
name = "one-shot-token"
version = "0.1.0"
edition = "2021"
description = "LD_PRELOAD library for one-shot access to sensitive environment variables"
license = "MIT"

[lib]
name = "one_shot_token"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
once_cell = "1.19"

[profile.release]
opt-level = 2
lto = true
strip = true
